# ProyectoFiscomp1

./: .gitignore  README.md  guia.txt  instalation.txt  mdt.C
data/outputs/: carga_recolectada_anodo_170GeV.csv  conteos_muones_170GeV.csv  graf.py  linea_1_kind_250000000.csv  linea_2_kind_750000000.csv  linea_3_kind_2000000000.csv  linea_4_kind_6500000000.csv  linea_5_kind_55000000000.csv  linea_6_kind_150000000000.csv
data/processed/: Am_emision.csv  Fe_emision.csv  muon_spectrum_sea_level.csv
scr/: gas_generator.py
scr/DriftTube_prueba/: gain_dt.py  sim_dt.py  sim_dt2.py  sim_dt3.py  sim_dt4.py  simulacion_dt.py
scr/DriftTube_prueba/FEM/: case.sif  drift_tube.geo  drift_tube.sif  malla_dt.py  view.py
scr/DriftTube_prueba/FEM/drift_tube/: drift_tube.result  entities.sif  mesh.boundary  mesh.header  mesh.names
scr/GEM_prueba/FEM/: GEM.geo  gem_refined_holes.geo
scr/GEM_prueba/FEM/GEM_elmer/: case.sif  mesh.boundary  mesh.elements  mesh.header  mesh.names
scr/GEM_prueba/FEM/GEM_refined_elmer/: entities.sif  mesh.boundary  mesh.header
scr/Wire2d_prueba/: sim_wire2d.py
scr/Wire2d_prueba/FEM/: wire2d.sif
scr/Wire2d_prueba/FEM/wire2d/: mesh.boundary
test/: test_garfield.py
test/DriftTube/: mdt.py
test/Gem/: CMakeLists.txt  gem_mt.C
